src/test/deca/codegen/valid/test_equal.deca
// Description:
//      test le test d'égalité dans une condition
//
// Resultat:
//      oui c'est bon
//
// Historique:
//      cree le 17/01/2022

{
    int a = 6;
    int b = 2;
    int c = 4;
    if( (b+c) == a ){
        println("oui c'est bon");
    }else{
        println("heuuu non");
    }

}

