src/test/deca/codegen/invalid/test_division_by_zero-3.deca
// Description:
//      Test la division par zero
//
// Resultat:
//      Ligne 15 : error - division par zero impossible  
// 
// Historique:
//    cree le 18/01/2022

{
    int a = 87;
    int b = 2;
    int c = 86;
    int d = 1;
    int res = b/(a-c-d);
}

